[gd_scene load_steps=9 format=3 uid="uid://5tp8jugm2nga"]

[ext_resource type="Script" path="res://scripts/ui/game_ui.gd" id="1_gf3kv"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="2_6awoh"]
[ext_resource type="Texture2D" uid="uid://b4rhr2r82wteo" path="res://assets/gui/panel-timer.png" id="3_5xgij"]
[ext_resource type="FontFile" uid="uid://yaxi3v0erdfl" path="res://assets/fonts/munro.ttf" id="4_ru5dt"]
[ext_resource type="Texture2D" uid="uid://bh3ydq1dwq5eq" path="res://assets/gui/panel-gems.png" id="5_gsc5n"]
[ext_resource type="Texture2D" uid="uid://ct04dquahq7s5" path="res://assets/gui/panel-menu-large.png" id="6_oydtc"]

[sub_resource type="LabelSettings" id="LabelSettings_jfnh8"]
font = ExtResource("4_ru5dt")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_013u4"]
font = ExtResource("4_ru5dt")
font_size = 20

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_gf3kv")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_6awoh")

[node name="TimerPanel" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 65.0
offset_bottom = 33.0
texture = ExtResource("3_5xgij")
stretch_mode = 2

[node name="TimerLabel" type="Label" parent="HUD/TimerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -10.0
offset_right = 9.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
text = "999.99"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="GemsPanel" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 415.0
offset_top = 1.0
offset_right = 479.0
offset_bottom = 33.0
texture = ExtResource("5_gsc5n")
stretch_mode = 2

[node name="GemsAmountLabel" type="Label" parent="HUD/GemsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65625
anchor_top = 0.390625
anchor_right = 0.65625
anchor_bottom = 0.390625
offset_left = -7.0
offset_top = -6.5
offset_right = 13.0
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "9999"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="WinScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -64.0
offset_right = 80.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinPanel" type="TextureRect" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -64.0
offset_right = 80.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_oydtc")
stretch_mode = 2

[node name="WinLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_top = -17.0
offset_right = 64.5
offset_bottom = 7.0
grow_horizontal = 2
text = "LEVEL COMPLETED"
label_settings = SubResource("LabelSettings_013u4")

[node name="TimerScoreLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -54.0
offset_right = -10.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
text = "TIMER SCORE"
label_settings = SubResource("LabelSettings_jfnh8")
horizontal_alignment = 2

[node name="TimerScoreValueLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -54.0
offset_right = 42.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
text = "999999"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="GemsScoreLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -37.0
offset_right = -10.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
text = "GEMS SCORE"
label_settings = SubResource("LabelSettings_jfnh8")
horizontal_alignment = 2

[node name="GemsScoreValueLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -37.0
offset_right = 42.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
text = "999999"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="SeparatorLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -26.0
offset_right = 64.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
text = "---------------------------------"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="TotalScoreLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -13.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "TOTAL SCORE"
label_settings = SubResource("LabelSettings_jfnh8")
horizontal_alignment = 2

[node name="TotalScoreValueLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -13.0
offset_right = 42.0
grow_horizontal = 2
grow_vertical = 2
text = "999999"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="NextButton" type="Button" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 7.0
offset_right = 30.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ru5dt")
theme_override_font_sizes/font_size = 10
text = "NEXT"

[node name="RestartButton" type="Button" parent="WinScreen"]
layout_mode = 0
offset_left = 50.0
offset_top = 96.0
offset_right = 110.0
offset_bottom = 117.0
theme_override_fonts/font = ExtResource("4_ru5dt")
theme_override_font_sizes/font_size = 10
text = "RESTART"

[node name="MainMenuButton" type="Button" parent="WinScreen"]
layout_mode = 0
offset_left = 50.0
offset_top = 121.0
offset_right = 110.0
offset_bottom = 142.0
theme_override_fonts/font = ExtResource("4_ru5dt")
theme_override_font_sizes/font_size = 10
text = "MAIN MENU"

[connection signal="pressed" from="WinScreen/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="WinScreen/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="WinScreen/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
